# shame.h

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shame.c  shame.h
tests/: Makefile  readEntireFile.c  vector.c
